# OpenbookLM

./: README.md  demo_ui.py  main.py  pyproject.toml  requirements.txt
rag_src/: config.json  main.py
rag_src/RAG/: .env  data_loader.py  db_manager.py  main.py  rag_pipeline.py  vectorstore.py
rag_src/RAG/tests/: data_loader_test.py  nomic_embedding_test.py  test_embeddings.py
rag_src/frontend/: add_source_dialog.py  flow_layout.py  load_data.py  main_window.py  rag_ui.py  styles.py  workspace_window.py
rag_src/frontend/tests/: import_rag_test.py
rag_src/llm/: ollama_integration.py
rag_src/llm/tests/: ollama_integration_test.py
src/RAG/: data_loader.py  embedding.py  main.py  rag_pipeline.py  search.py
src/RAG/tests/: data_loader_test.py
src/data/: account_entries.csv  ml.txt
src/frontend/: main_window.py  rag_ui.py  test.py  workspace_window.py
src/frontend/tests/: document_loader_test.py
