[project]
name = "openbooklm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.3.5",
    "faiss-cpu>=1.13.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-groq>=1.1.0",
    "langchain-ollama>=1.0.0",
    "ollama>=0.6.1",
    "pymupdf>=1.26.6",
    "pypdf>=6.4.0",
    "pyqt6>=6.10.0",
    "python-dotenv>=1.2.1",
    "qtawesome>=1.4.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "speechrecognition>=3.14.4",
]
